lock scroll on dialog open, also prevent layout shifts

--- a/src/components/KDialog/style.scss
+++ b/src/components/KDialog/style.scss
@@ -4,18 +4,22 @@ dialog {
   border: none;
   padding: 0;
 }
+dialog,
+::backdrop {
+  overscroll-behavior: contain;
+}
 dialog::backdrop {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.8);
 }
 dialog > div {
   padding: 1em;
 }
 dialog[open] {
-  animation: zoom 0.3s ease-in;
+  animation: zoom 0.2s ease-out;
 }
 @keyframes zoom {
   from {
-    transform: scale(0.95);
+    transform: scale(0.9);
   }
   to {
     transform: scale(1);
