--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,22 @@
   outline: none;
 }
 
+/* prevent layout shifts when, dialog */
+html {
+  scrollbar-gutter: stable;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+  background-color: #191b29;
+}
+
+/* lock scroll, when dialog is opened */
+body:has(dialog[open]) {
+  overflow-y: hidden;
+}
+
 input,
 button {
   &:focus-visible {
@@ -18,12 +34,6 @@ h5,
 h6,
 p {
   margin: 0;
-}
-
-body {
-  margin: 0;
-  overflow-x: hidden;
-  background-color: #191b29;
 }
 
 .crypto-convertor-box {
